--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ngx-markdown-editor",
   "version": "1.1.7",
   "description": "Angular markdown editor based on ace editor",
-  "main": "index.js",
+  "main": "bundles/ngx-markdown-editor.umd.js",
   "scripts": {
     "build": "ng-packagr -p package.json"
   },
@@ -40,9 +40,11 @@
     "ng-packagr": "^2.2.0",
     "typescript": "^2.7.2"
   },
-  "ngPackage": {
-    "lib": {
-      "entryFile": "index.ts"
-    }
+  "module": "esm5/ngx-markdown-editor.js",
+  "es2015": "esm2015/ngx-markdown-editor.js",
+  "typings": "ngx-markdown-editor.d.ts",
+  "metadata": "ngx-markdown-editor.metadata.json",
+  "dependencies": {
+    "tslib": "^1.7.1"
   }
 }
